--- a/src/app/adm-home/lookup-management/lookup-management.component.html
+++ b/src/app/adm-home/lookup-management/lookup-management.component.html
@@ -107,15 +107,17 @@
                     placeholder="Display Name" class="p-column-filter">
             </th>
             <th>
-                <p-calendar (onSelect)="onDateSelect($event)" pTooltip="Filter By Created Date" [touchUI]="true"
-                    (onClearClick)="lookupTable.filter('', 'date', 'createdDate')" [showButtonBar]="true"
-                    styleClass="p-column-filter" placeholder="Created Date" [readonlyInput]="true">
+                <p-calendar (onSelect)="onDateSelect($event)" pTooltip="Filter By Created Date" yearRange="1950:2002"
+                    [yearNavigator]="true" (onClearClick)="lookupTable.filter('', 'date', 'createdDate')"
+                    [showButtonBar]="true" styleClass="p-column-filter" placeholder="Created Date"
+                    [readonlyInput]="true">
                 </p-calendar>
             </th>
             <th>
-                <p-calendar (onSelect)="onDateSelect($event)" pTooltip="Filter By Updated Date" [touchUI]="true"
-                    (onClearClick)="lookupTable.filter('', 'date', 'updatedDate')" [showButtonBar]="true"
-                    styleClass="p-column-filter" placeholder="Updated Date" [readonlyInput]="true">
+                <p-calendar (onSelect)="onDateSelect($event)" pTooltip="Filter By Updated Date" yearRange="1950:2002"
+                    [yearNavigator]="true" (onClearClick)="lookupTable.filter('', 'date', 'updatedDate')"
+                    [showButtonBar]="true" styleClass="p-column-filter" placeholder="Updated Date"
+                    [readonlyInput]="true">
                 </p-calendar>
             </th>
             <th></th>
