--- a/src/app/adm-home/room-allocate/room-allocate.component.html
+++ b/src/app/adm-home/room-allocate/room-allocate.component.html
@@ -50,15 +50,15 @@
           class="p-column-filter">
       </th>
       <th>
-        <p-calendar (onSelect)="onDateSelect($event)" pTooltip="Filter By created Date"
-          (onClearClick)="roomRequestTable.filter('', 'date', 'checkInDate')" [showButtonBar]="true"
-          styleClass="p-column-filter" placeholder="Created Date" [readonlyInput]="true">
+        <p-calendar (onSelect)="onDateSelect($event)" pTooltip="Filter By created Date" yearRange="1950:2002"
+          [yearNavigator]="true" (onClearClick)="roomRequestTable.filter('', 'date', 'checkInDate')"
+          [showButtonBar]="true" styleClass="p-column-filter" placeholder="Created Date" [readonlyInput]="true">
         </p-calendar>
       </th>
       <th>
-        <p-calendar (onSelect)="onDateSelect($event)" pTooltip="Filter By Updated Date"
-          (onClearClick)="roomRequestTable.filter('', 'date', 'checkOutDate')" [showButtonBar]="true"
-          styleClass="p-column-filter" placeholder="Updated Date" [readonlyInput]="true">
+        <p-calendar (onSelect)="onDateSelect($event)" pTooltip="Filter By Updated Date" yearRange="1950:2002"
+          [yearNavigator]="true" (onClearClick)="roomRequestTable.filter('', 'date', 'checkOutDate')"
+          [showButtonBar]="true" styleClass="p-column-filter" placeholder="Updated Date" [readonlyInput]="true">
         </p-calendar>
       </th>
       <th>
