--- a/src/app/common/components/driver-management/driver-management.component.html
+++ b/src/app/common/components/driver-management/driver-management.component.html
@@ -1,1 +1,141 @@
-<p>driver-management works!</p>
+<div class="float-right">
+    <form [formGroup]="driverRegistrationForm" (ngSubmit)="createDriver()">
+        <table class="table table-striped table-hover" style="width: 25rem;">
+            <tr>
+                <td colspan="2">
+                    <div class="form-group">
+                        <input type="text" formControlName="driverName" class="form-control" pTooltip="Name of Driver"
+                            [ngClass]="{ 'is-invalid': submitted && f.driverName.errors }" name="driverName"
+                            id="driverName" placeholder="Name of the Driver" style="width: 100%;">
+                        <div *ngIf="submitted && f.driverName.errors" class="invalid-feedback">
+                            <div *ngIf="f.driverName.errors.required">Name is required</div>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <div class="form-group">
+                        <input type="text" class="form-control" pTooltip="Driver License Number"
+                            [ngClass]="{ 'is-invalid': submitted && f.driverLicense.errors }"
+                            formControlName="driverLicense" id="driverLicense" placeholder="Driver License"
+                            style="width: 100%;">
+                        <div *ngIf="submitted && f.driverLicense.errors" class="invalid-feedback">
+                            <div *ngIf="f.driverLicense.errors.required">Driver License is required</div>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+            <div class="form-group">
+                <p-dropdown [options]="locations" (onChange)="onLocation($event)" class="form-control"
+                    placeholder="Select Driver Location" pTooltip="Location of the Driver" name="location"
+                    [(ngModel)]="location" [virtualScroll]="false"
+                    [ngClass]="{ 'is-invalid': submitted && f.location.errors }" formControlName="location"
+                    optionLabel="displayName" [style]="{'width':'200px', 'height':'auto'}">
+                </p-dropdown>
+                <div *ngIf="submitted && f.location.errors" class="invalid-feedback">
+                    <div *ngIf="f.location.errors.required">Please select model of Rooms</div>
+                </div>
+            </div>
+            <tr>
+                <td><input type="submit" pTooltip="Create the driver with given details" class="btn-primary"
+                        value="Create Driver"></td>
+                <td><input type="reset" pTooltip="Reset the form" class="btn-primary" value="Reset"></td>
+            </tr>
+        </table>
+    </form>
+</div>
+
+<p-table #driverTable *ngIf="driversList?.length" [style]="{'width':'70%','margin-top':'8px'}" [value]="driversList"
+    [globalFilterFields]="['driverId','driverName','driverLicense','location']" [paginator]="true"
+    [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [rowsPerPageOptions]="[5, 10,15]" [rows]="10">
+    <ng-template pTemplate="caption">
+        <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
+        <input type="text" pInputText size="50" placeholder="Global Filter" pTooltip="Use this to filter globally"
+            (input)="driverTable.filterGlobal($event.target.value, 'contains')" style="width:auto">
+    </ng-template>
+    <ng-template pTemplate="header">
+        <tr>
+            <th pSortableColumn="driverId">Driver Id<p-sortIcon field="driverId"></p-sortIcon>
+            </th>
+            <th pSortableColumn="driverName">Driver Name<p-sortIcon field="driverName"></p-sortIcon>
+            </th>
+            <th pSortableColumn="location">Driver Location<p-sortIcon field="location"></p-sortIcon>
+            </th>
+            <th pSortableColumn="driverLicense">Driver License<p-sortIcon field="driverLicense"></p-sortIcon>
+            </th>
+            <th>Deleted</th>
+            <th>Action</th>
+        </tr>
+        <tr>
+            <th>
+                <input pInputText type="text" placeholder="Driver Id" pTooltip="Filter by Driver Id"
+                    (input)="driverTable.filter($event.target.value, 'driverId', 'contains')" class="p-column-filter">
+            </th>
+            <th>
+                <input pInputText type="text" pTooltip="Filter by Driver name"
+                    (input)="driverTable.filter($event.target.value, 'driverName', 'contains')" placeholder="Name"
+                    class="p-column-filter">
+            </th>
+            <th>
+                <input pInputText type="text" (input)="driverTable.filter($event.target.value, 'location', 'contains')"
+                    pTooltip="Filter by Location" placeholder="Driver Location" class="p-column-filter">
+            </th>
+            <th>
+                <input pInputText type="text"
+                    (input)="driverTable.filter($event.target.value, 'driverLicense', 'contains')"
+                    pTooltip="Filter by Driver License" placeholder="Driver License Number" class="p-column-filter">
+            </th>
+            <th></th>
+            <th></th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-driver let-editing="editing" let-ri="rowIndex">
+        <tr [pEditableRow]="driver">
+            <td>{{driver.driverId}}</td>
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="text" [(ngModel)]="driver.driverName"
+                            pTooltip="Editing the name of driver" driverName>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{driver.driverName}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText [(ngModel)]="driver.location" pTooltip="Editing the location of driver"
+                            driverLocation>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{driver.location}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td pEditableColumn>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText [(ngModel)]="driver.driverLicense"
+                            pTooltip="Editing the Driving License of driver" driverLicense>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{driver.driverLicense}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td>
+                <button class="btn-primary" (click)="toggleDelete(driver)"
+                    pTooltip="{{driver.deleted != 'Y'?'Delete the driver':'Undelete the driver'}}">
+                    <div *ngIf="driver.deleted != 'Y'">Delete</div>
+                    <div *ngIf="driver.deleted === 'Y'">Undelete</div>
+                </button>
+            </td>
+            <td><button class="btn-primary" (click)="updateDriver(driver)" pTooltip="Save the updates made">
+                    Update</button></td>
+        </tr>
+    </ng-template>
+</p-table>
