--- a/src/app/common/components/vehicle-management/vehicle-management.component.html
+++ b/src/app/common/components/vehicle-management/vehicle-management.component.html
@@ -58,9 +58,9 @@
 </div>
 
 <p-table #vehicleTable *ngIf="vehiclesList?.length" [style]="{'width':'50%','margin-top':'8px'}" [value]="vehiclesList"
-    [globalFilterFields]="['vehicleId','vehicleName','price']" [paginator]="true" [showCurrentPageReport]="true"
-    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[5, 10,15]"
-    [rows]="10">
+    [globalFilterFields]="['vehicleId','vehicleName','regNum','location']" [paginator]="true"
+    [showCurrentPageReport]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [rowsPerPageOptions]="[5, 10,15]" [rows]="10">
     <ng-template pTemplate="caption">
         <i class="pi pi-search" style="margin:4px 4px 0 0"></i>
         <input type="text" pInputText size="50" placeholder="Global Filter" pTooltip="Use this to filter globally"
@@ -146,5 +146,10 @@
             <td><button class="btn-primary" (click)="updateVehicle(vehicle)" pTooltip="Save the updates made">
                     Update</button></td>
         </tr>
+    </ng-template>
+    <ng-template pTemplate="emptymessage">
+        <div *ngIf="vehiclesList.length==0">
+            No records found
+        </div>
     </ng-template>
 </p-table>
