--- a/src/app/adm-home/amenity-management/amenity-management.component.html
+++ b/src/app/adm-home/amenity-management/amenity-management.component.html
@@ -110,4 +110,9 @@
                     Update</button></td>
         </tr>
     </ng-template>
+    <ng-template pTemplate="emptymessage">
+        <div *ngIf="amenitiesList.length==0">
+            No records found
+        </div>
+    </ng-template>
 </p-table>
