--- a/src/app/adm-home/employee-management/employee-management.component.html
+++ b/src/app/adm-home/employee-management/employee-management.component.html
@@ -157,4 +157,9 @@
                     Update</button></td>
         </tr>
     </ng-template>
+    <ng-template pTemplate="emptymessage">
+        <div *ngIf="employeesList.length==0">
+            No records found
+        </div>
+    </ng-template>
 </p-table>
