--- a/src/app/adm-home/tour-management/tour-management.component.html
+++ b/src/app/adm-home/tour-management/tour-management.component.html
@@ -161,4 +161,9 @@
                     Update</button></td>
         </tr>
     </ng-template>
+    <ng-template pTemplate="emptymessage">
+        <div *ngIf="tourPackageList.length==0">
+            No records found
+        </div>
+    </ng-template>
 </p-table>
