--- a/src/app/common/components/driver-management/driver-management.component.html
+++ b/src/app/common/components/driver-management/driver-management.component.html
@@ -138,4 +138,9 @@
                     Update</button></td>
         </tr>
     </ng-template>
+    <ng-template pTemplate="emptymessage">
+        <div *ngIf="driversList.length==0">
+            No records found
+        </div>
+    </ng-template>
 </p-table>
