--- a/src/app/cust-home/cust-home.component.html
+++ b/src/app/cust-home/cust-home.component.html
@@ -285,6 +285,11 @@
         </td>
       </tr>
     </ng-template>
+    <ng-template pTemplate="emptymessage">
+      <div *ngIf="roomRequestList.length==0">
+        No records found
+      </div>
+    </ng-template>
   </p-table>
 </div>
 <div *ngIf="viewRewards">
