--- a/src/app/cust-home/tour-booking/tour-booking.component.html
+++ b/src/app/cust-home/tour-booking/tour-booking.component.html
@@ -79,4 +79,9 @@
                     Book Tour</button></td>
         </tr>
     </ng-template>
+    <ng-template pTemplate="emptymessage">
+        <div *ngIf="tourPackageList.length==0">
+            No records found
+        </div>
+    </ng-template>
 </p-table>
