--- a/src/app/cust-home/tour-booking/tour-booking.component.html
+++ b/src/app/cust-home/tour-booking/tour-booking.component.html
@@ -70,7 +70,7 @@
                 <p-calendar class="form-control" dateFormat="yy-mm-dd" [showIcon]="true" yearRange="1950:2002"
                     [yearNavigator]="true" [showButtonBar]="true" name="startDate" class="form-control"
                     id="startDate{{tourPackage.tourPackageName}}" pTooltip="Tour Start Date"
-                    placeholder="Date of Travel" [readonlyInput]="true">
+                    (onSelect)="onDateSelect($event)" placeholder="Date of Travel" [readonlyInput]="true">
                 </p-calendar>
 
             </td>
