Cleanup rooms done

--- a/src/app/adm-home/room-management/room-management.component.html
+++ b/src/app/adm-home/room-management/room-management.component.html
@@ -69,7 +69,8 @@
       Rooms</button> &nbsp;
     <button class="btn-primary" pTooltip="View All Booked Rooms" (click)="getRoomsByStatus(constants.OCCUPIED)">Booked
       Rooms</button> &nbsp;
-    <button class="btn-primary" pTooltip="View All rooms" (click)="getAllRooms()">All Rooms</button>
+    <button class="btn-primary" pTooltip="View All rooms" (click)="getAllRooms()">All Rooms</button>&nbsp;
+    <button class="btn-primary" pTooltip="View All rooms" (click)="cleanUpRooms()">Cleanup Rooms</button>
   </ng-template>
   <ng-template pTemplate="header">
     <tr style="width: inherit">
